보안 코드 구현